--- a/assets/css/style_interno.css
+++ b/assets/css/style_interno.css
@@ -14,6 +14,7 @@
     --accents: #d9d9d9;
     --font-color1: #000000;
     --font-color2: #ffffff;
+    --form-bg: #ededed
 }
 
 #app {
@@ -22,6 +23,7 @@
 }
 
 /* Barra lateral */
+/* se alguma boa alma quiser e puder passar essa barra pra js, afim de otimizar o site... */
 #sidebar {
     background-color: var(--prim-color);
     color: var(--font-color2);
@@ -36,12 +38,12 @@
     height: 5em;
 }
 
-a {
+.page-link {
     text-decoration: none;
     color: inherit;
 }
 
-a:hover {
+.page-link:hover {
     background-color: var(--ter-color);
 }
 
@@ -80,9 +82,9 @@ a:hover {
     height: 2rem;
 }
 
-form > input {
+.busca {
     border: none;
-    background-color: inherit;
+    background-color: var(--accents);
 }
 
 #btn-busca {
@@ -92,10 +94,23 @@ form > input {
     border-radius: 50%;
 }
 
+.btn-nobg{
+    background-color: inherit;
+    border: none;
+}
+
+.btn-nobg > a {
+    text-decoration: none;
+    color: var(--prim-color);
+    font-size: medium;
+
+}
+
 /* Lista de todos os pacientes */
 .btn-geral {
     color: var(--font-color2);
     background-color: var(--prim-color);
+    font-family: inherit;
     border: none;
     border-radius: 15px;
     padding: 0.5em;
@@ -170,6 +185,47 @@ form > input {
 
 #calend > input {
     accent-color: var(--sec-color);
+}
+
+/* Cadastro de paciente e formulários gerais */
+#content {
+    padding: 1em;
+}
+
+.form-label {
+    display: block;
+    margin-top: 1em;
+}
+
+.form-entry {
+    border: none;
+    border-radius: 10px;
+    background-color: var(--form-bg);
+    width: 30rem;
+    height: 2.5em;
+    margin-bottom: 0.5em;
+    padding: 1em;
+    font-family: inherit;
+}
+
+.form-entry:focus{
+    border: var(--prim-color) 1px solid;
+    background-color: var(--accents);
+}
+
+.form-txt {
+    border: none;
+    border-radius: 10px;
+    background-color: var(--form-bg);
+    width: 100%;
+    padding: 1em;
+    margin-bottom: 1em;
+    font-family: inherit;
+}
+
+.form-txt:focus {
+    border: var(--prim-color) 1px solid;
+    background-color: var(--accents);  
 }
 
 /* Calendário. A estilização ficaria aqui se a gente tivesse um calendário. */
