--- a/assets/css/style_interno.css
+++ b/assets/css/style_interno.css
@@ -22,6 +22,11 @@
     font-family: Inter;
 }
 
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
 /* Barra lateral */
 /* se alguma boa alma quiser e puder passar essa barra pra js, afim de otimizar o site... */
 #sidebar {
@@ -227,6 +232,25 @@
     border: var(--prim-color) 1px solid;
     background-color: var(--accents);  
 }
+
+/* Página individual de aluno */
+#info {
+    padding: 1em;
+    width: 85vw;
+}
+
+.info-aluno {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    justify-content: space-between;
+}
+
+form > .pac-icon {
+    width: 15em;
+    height: 15em;
+}
+
 
 /* Calendário. A estilização ficaria aqui se a gente tivesse um calendário. */
 #calendario-placeholder {
