--- a/slide-bar/ESTILO.css
+++ b/slide-bar/ESTILO.css
@@ -7,7 +7,7 @@
     font-family: 'Poppins', sans-serif;
 }
 
-body {
+/*body {
     display: flex;
     min-height: 100vh;
     background-color: #e3e9f7;
@@ -18,7 +18,7 @@ main {
     position: fixed;
     z-index: 1;
     padding-left: calc(82px + 20px);
-}
+} */
 
 #sidebar {
     display: flex;
